2025-07-23T00:59:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16458930219 # 713
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-23
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 874 1352 / 886 1364
* notice: next accum: outdated-unq outdated-all / unq all: 875 1353 / 886 1364
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-09] / []

2025-07-22T00:59:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16431792965 # 712
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-22
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 873 1351 / 885 1363
* notice: next accum: outdated-unq outdated-all / unq all: 874 1352 / 886 1364
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-08] / [2025-07-21]

2025-07-21T01:02:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16406271721 # 711
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-21
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 872 1350 / 884 1362
* notice: next accum: outdated-unq outdated-all / unq all: 873 1351 / 885 1363
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-07] / [2025-07-20]

2025-07-20T01:04:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16394526649 # 710