@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-23T00:59:48Z",
+  "timestamp" : "2025-07-24T00:59:20Z",
   "count_outdated" : 1353,
   "uniques_outdated" : 875,
-  "count" : 1364,
-  "uniques" : 886,
+  "count" : 1365,
+  "uniques" : 887,
   "clones" : [
     {
       "timestamp": "2025-07-10T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
